MORE-706: response parsing implementation